--- a/index.html
+++ b/index.html
@@ -19,10 +19,28 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#000000">
 </head>
-<body>
+<body theme="light">
+	<div class="settingsBar">
+		<h3 class="title">Crokinole Scoreboard</h3>
+		<div class="themeSelect">
+			<label>Theme</label>
+			<select onchange="setTheme(this.value);">
+			  <option selected value="light">Light</option>
+			  <option value="dark">Dark</option>
+			  <option value="bold">Bold</option>
+			</select>
+		</div>
+	</div>
 	<div class="container">
 		<div class="team A">
-			<h2 class="teamName">White</h2>
+			<select class="teamName">
+			  <option selected value="white">White</option>
+			  <option value="black">Black</option>
+			  <option value="green">Green</option>
+			  <option value="blue">Blue</option>
+			  <option value="brown">Brown</option>
+			  <option value="tan">Tan</option>
+			</select>
 			<h1 class="score">0</h1>
 			<div class="buttons">
 				<div class="add">
@@ -40,7 +58,14 @@
 			</div>
 		</div>
 		<div class="team B">
-			<h2 class="teamName">Black</h2>
+			<select class="teamName">
+			  <option value="white">White</option>
+			  <option selected value="black">Black</option>
+			  <option value="green">Green</option>
+			  <option value="blue">Blue</option>
+			  <option value="brown">Brown</option>
+			  <option value="tan">Tan</option>
+			</select>
 			<h1 class="score">0</h1>
 			<div class="buttons">
 				<div class="add">
